tests/samples/negative/generics/generic_function_inference_failure.ax
module generic_function_inference_failure;

fn zero<T>() -> i32 {
    return 0;
}

fn main() -> i32 {
    let value = zero();
    return value;
}
